# MC_RTC_PickPlace_Kinova

./: .gitignore  frames_2026-02-27_20.39.54.gv
src/: kinova_6dof.urdf  mc_rtc.yaml
src/admittance_control/: CMakeLists.txt  Readme.md  TUNING_GUIDE.md  package.xml
src/admittance_control/config/: ros2_controllers.yaml
src/admittance_control/etc/: KinovaHandGuiding.yaml  mc_rtc.yaml
src/admittance_control/launch/: admittance_gazebo.launch.py  admittance_real.launch.py
src/admittance_control/src/: KinovaHandGuiding.cpp  kortex_mc_rtc_bridge_admittance.cpp
src/admittance_control/src/states/: HandGuideState.cpp  HoldPositionState.cpp  UpdateHoldTarget.cpp  UpdateHoldTarget.h
src/admittance_control/urdf/: kinova_6dof_sim.urdf
src/gripper_control/gripper_control/: gripper_action_client.py
src/kinova_pick_place/: CMakeLists.txt  package.xml
src/kinova_pick_place/config/: PickPlaceFSM.yaml
src/kinova_pick_place/include/kinova_pick_place/: PickPlaceController.h
src/kinova_pick_place/launch/: pick_place.launch.py
src/kinova_pick_place/src/: PickPlaceController.cpp
src/kinova_pick_place/src/states/: ApproachState.cpp  LiftState.cpp  PickState.cpp  PlaceApproachState.cpp  PlaceState.cpp  ResetState.cpp
src/my_kinova_controller/: CMakeLists.txt
src/my_kinova_controller/src/: MyKinovaController.cpp  MyKinovaController.h
src/pick_and_place/: CMakeLists.txt  package.xml
src/pick_and_place/config/: ros2_controllers.yaml
src/pick_and_place/etc/: PickPlaceController.yaml  RealRobotSensor.yaml
src/pick_and_place/include/: PickPlaceController.h
src/pick_and_place/launch/: pick_place_gazebo.launch.py  pick_place_real.launch.py
src/pick_and_place/pick_and_place/config/: ros2_controllers.yaml
src/pick_and_place/pick_and_place/etc/: PickPlaceController.yaml
src/pick_and_place/pick_and_place/include/: PickPlaceController.h
src/pick_and_place/pick_and_place/launch/: pick_place_gazebo.launch.py
src/pick_and_place/pick_and_place/scripts/: mc_rtc_joint_relay.py
src/pick_and_place/pick_and_place/src/: PickPlaceController.cpp
src/pick_and_place/pick_and_place/src/states/: PickPlaceStates.cpp
src/pick_and_place/pick_and_place/worlds/: pick_place.world
src/pick_and_place/scripts/: mc_rtc_joint_relay.py
src/pick_and_place/src/: PickPlaceController.cpp  kortex_mc_rtc_bridge.cpp
src/pick_and_place/src/plugins/: RealRobotSensor.cpp
src/pick_and_place/src/states/: PickPlaceStates.cpp
src/pick_and_place/urdf/: kinova_6dof_sim.urdf
src/pick_and_place/worlds/: pick_place_with_table.world
