<?xml version="1.0"?>
<package format="3">
  <name>admittance_control</name>
  <version>1.0.0</version>
  <description>Admittance Control controller for mc_rtc</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Removed mc_rtc from here to match your working pick_and_place package -->
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
