<?xml version="1.0"?>
<package format="3">
  <name>pick_and_place</name>
  <version>1.0.0</version>
  <description>Pick and place controller using mc_rtc and ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
